# xion-brale-demo

./: .gitignore  README.md
.superpowers/brainstorm/46146-1773934073/: .server-stopped  android-changes.html  approaches.html  auth-flow.html  ios-project.html  waiting.html
brale-proxy/: .env.example  db.js  index.js  package-lock.json  package.json
brale-proxy-cf/: package-lock.json  package.json  wrangler.toml
brale-proxy-cf/migrations/: 0001_init.sql
brale-proxy-cf/src/: auth.ts  db.ts  index.ts  types.ts
contracts/hm-vault/: Cargo.toml
contracts/hm-vault/artifacts/: checksums.txt  hm_vault.wasm
contracts/hm-vault/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
docs/: vault-contract-research.md
docs/superpowers/plans/: 2026-04-03-link-bank-screen.md  2026-04-03-vault-deploy-and-integrate.md
docs/superpowers/specs/: 2026-04-03-vault-contract-design.md
xion-android-demo/: .gitignore  README.md  local.properties  settings.gradle.kts
xion-android-demo/app/: build.gradle.kts
xion-android-demo/scripts/: build-mob-android.sh
xion-ios/: project.yml
xion-ios/XionDemo/: Info.plist  XionDemo.entitlements
xion-ios/XionDemo.xcodeproj/: project.pbxproj
xion-ios/XionDemo/App/: AppContainer.swift  XionDemoApp.swift
xion-ios/XionDemo/Configuration/: Constants.swift
xion-ios/XionDemo/MobBindings/: mob.swift  mobFFI.h
xion-ios/XionDemo/Models/: BalanceInfo.swift  BraleModels.swift  OAuthTokens.swift  TransactionResult.swift  WalletState.swift
xion-ios/XionDemoTests/: XionDemoTests.swift
xion-ios/scripts/: build-mob-ios.sh
(+104 files in other folders)
